# dsgc

./: .gitignore  .zenodo.json  CITATION.cff  README.md  pyproject.toml  reproduce.sh
audit/: README.md
audit/docs/: final_v1_postmortem.md  final_v2_design.md  redesign-policy.md
audit/protocols/: final_experiment_v1.json  final_experiment_v2_draft.json
audit/results/: final_v1_encoder_sensitivity_raw.json  final_v1_encoder_sensitivity_summary.json  final_v1_graph_ablation_raw.json  final_v1_graph_ablation_summary.json  final_v1_report.md  final_v1_template_stratified_raw.json  final_v1_template_stratified_summary.json  final_v2_calibration_pass1_report.md  final_v2_calibration_pass1_summary.json
docs/: RELEASE_v0.1.0.md  RESULT_MANIFEST.json  RUNBOOK.md  ZENODO_CHECKLIST.md  final_v2_main_suite.md
paper/: main.tex  references.bib
protocols/: final_experiment_v2_main.json  final_experiment_v3_robustness.json
results/: final_v2_main_raw.json  final_v2_main_report.md  final_v2_main_summary.json  final_v3_robustness_report.md  final_v3_robustness_summary.json
src/: config.py  memory_types.py  policy.py
src/baselines/: __init__.py  retrieval_only.py  sliding_window.py
src/benchmarking/: __init__.py  benchmark.py  benchmark_v2.py  evaluator.py  policy.py
src/core/: __init__.py  encoder.py  graph.py  math_utils.py
src/experiments/: run_final_v1.py  run_final_v2_calibration.py  run_final_v2_main.py  run_final_v3_robustness.py
