[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dsgc"
version = "0.1.0"
description = "Dependency-aware Semantic Garbage Collection for long-horizon LLM agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "smkgenesis" }
]
dependencies = []

[project.optional-dependencies]
experiments = [
  "sentence-transformers>=3.0,<4.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
